# hooks-for-days

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
scripts/: copied_lines_at_file_end.py
tests/: test_copied_lines_at_file_end.py
